Fix NativeCallSystemArrayCopy test